--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
-backend_url =your backend url
-sentiment_analyzer_url=http://localhost:3030
+backend_url =https://jeudesmails-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai/
+sentiment_analyzer_url=https://sentianalyzer.1ojeqcaoiwfo.us-south.codeengine.appdomain.cloud/
